// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-element-from-recycle-bin should handle non-existent element in recycle bin 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-element-from-recycle-bin should permanently delete an element from the recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
